# fastnoise-simd-rs

./: Cargo.toml  bindgen_cmd.txt  build.rs
fastnoise-simd/: Cargo.toml  README.md
fastnoise-simd-bindings/: Cargo.toml  README.md  build.rs
fastnoise-simd-bindings/src/: lib.rs
fastnoise-simd-bindings/src/cpp/: FastNoiseSIMD.h
fastnoise-simd/src/: enums.rs  lib.rs  noise_set.rs  properties.rs  vector_set.rs
src/: lib.rs
src/cpp/: github.txt
windows/: notes.txt
windows/static/: FastNoiseSIMD.lib
