[package]
name = "fastnoise_simd_bindings"
version = "0.1.1"
authors = ["Austin Johnson <me@austinj.me>"]
edition = "2018"
repository = "https://github.com/AustinJ235/fastnoise-simd-rs"
documentation = "https://docs.rs/fastnoise-simd-bindings"
description = "Bindings for the FastNoiseSIMD library, https://github.com/Auburns/FastNoise."
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.55"
