[package]
name = "fastnoise-simd"
version = "0.1.1"
authors = ["Austin Johnson <me@austinj.me>"]
repository = "https://github.com/AustinJ235/fastnoise-simd-rs"
documentation = "https://docs.rs/fastnoise-simd"
description = "A safe wrapper around the fastnoise-simd-bindings crate."
license = "MIT"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnoise_simd_bindings = { version = "0.1.1", path = "../fastnoise-simd-bindings" }
